Back from the holidays

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Hero image start -->
     <section class="hero-image">
         <h1 class="hero-text">
-            Sports Clubs
+            Clubs at Burnside
         </h1>
     </section>
     <!-- Hero image end -->
@@ -40,18 +40,18 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>Sports Clubs</h2>
+                <p>Explore</p>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>Music Clubs</h2>
+                <p>Explore</p>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>STEM Clubs</h2>
+                <p><a href="https://www.w3schools.com/">Explore</a></p>
             </div>
         </div>
         <div class="card-rows">
