Added different club class websites

--- a/art.html
+++ b/art.html
@@ -23,10 +23,10 @@
         </div>
         <div>    
             <h1>
-                Why should I join a Sports club?
+                Why should I join an Art club?
             </h1>
             <p>
-                A great approach to keep active, improve your teamwork abilities, and foster a sense of camaraderie among your classmates is to join a sports club at school. Playing sports fosters discipline, resilience, and strategic thinking in addition to physical conditioning and smart lifestyle choices. Being a member of a team encourages you to push your boundaries and accomplish your goals because it creates great friendships and a supportive environment. A sports club offers an enjoyable and competitive environment where you may hone your talents, take part in friendly competition, and make lifelong memories, regardless of your level of experience as an athlete.
+                A great approach to explore your artistic side and express yourself is to join an arts club at school. You can study painting, theater, music, dance, and other artistic mediums. Having conversations with people who share your interests encourages cooperation and creativity, giving you the chance to hone your abilities and try out novel approaches in a safe setting. In addition, the arts club can offer chances for exhibitions, community initiatives, and performances, which can boost your self-esteem and bring you useful experience. Also, it's a great way to decompress and learn about yourself, which will enhance and enrich your time at school!
             </p>
         </div>
     </section>
@@ -39,21 +39,21 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Archery Club</h2>
+                <h2>Drama Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Basketball Club</h2>
+                <h2>SMP Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Badminton Club</h2>
+                <h2>Orchestra</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
