--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 Why should I join a club?
             </h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga similique debitis! Accusantium amet veritatis laudantium dolorum totam odio ad explicabo praesentium asperiores dignissimos blanditiis delectus dolor, repudiandae debitis inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid tempore dicta veritatis vitae omnis sint, impedit totam et molestiae laboriosam praesentium temporibus, quos, nesciunt dolores quia harum vero reiciendis repellendus!Lorem
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, explicabo eius beatae provident amet, iste saepe ab quisquam in, sint consequuntur cum rem autem iure! Fugit doloremque quasi sequi molestiae.
+                Getting involved in a school club is a great way to discover new interests, learn new skills, and create lifelong friendships. Clubs offer a safe space for you to work with others who are passionate about same things you are, such sports, science, art, or volunteer work. Joining a club can improve your confidence, add value to your school life, and give you a feeling of community inside the school. It's also a fantastic opportunity to relax and have fun away from the classroom!
             </p>
         </div>
     </section>
@@ -41,36 +40,47 @@
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
                 <h2>Sports Clubs</h2>
-                <p>Explore</p>
+                <a href="sports.html">
+                    <button>Explore</button>
+                </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Music Clubs</h2>
-                <p>Explore</p>
+                <h2>Art and Performance Clubs</h2>
+                <a href="art.html">
+                    <button>Explore</button>
+                </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
                 <h2>STEM Clubs</h2>
-                <p><a href="https://www.w3schools.com/">Explore</a></p>
+                <a href="STEM.html">
+                    <button>Explore</button>
+                </a>
             </div>
         </div>
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>Gaming Clubs</h2>
+                <a href="gaming.html">
+                    <button>Explore</button>
+                </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>Leadership Clubs</h2>
+                <a href="leadership.html">
+                    <button>Explore</button>
+                </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>heheheha</h2>
-                <p>nerf poco</p>
+                <h2>Recreational Clubs</h2>
+                <a href="recreational.html">
+                    <button>Explore</button>
+                </a>
             </div>
-        </div>
     </section>
 </body>
 </html>
