--- a/leadership.html
+++ b/leadership.html
@@ -23,10 +23,10 @@
         </div>
         <div>    
             <h1>
-                Why should I join a Sports club?
+                Why should I join a Leadership club?
             </h1>
             <p>
-                A great approach to keep active, improve your teamwork abilities, and foster a sense of camaraderie among your classmates is to join a sports club at school. Playing sports fosters discipline, resilience, and strategic thinking in addition to physical conditioning and smart lifestyle choices. Being a member of a team encourages you to push your boundaries and accomplish your goals because it creates great friendships and a supportive environment. A sports club offers an enjoyable and competitive environment where you may hone your talents, take part in friendly competition, and make lifelong memories, regardless of your level of experience as an athlete.
+                Enrolling in your school's leadership club is a great way to get practical skills that will help you both now and in the future. These groups concentrate on fostering collaboration, confidence, and communication, which will enable you to take the lead and motivate others. Being a part of a leadership club frequently entails planning events, working on community initiatives, and interacting with other groups, all of which improve your flexibility and problem-solving skills. Being a member of a leadership club also facilitates networking with mentors and peers, forging important relationships that can further your academic and personal development. It's an excellent approach to have a good influence both inside and outside of your school!
             </p>
         </div>
     </section>
@@ -39,21 +39,21 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Archery Club</h2>
+                <h2>Drama Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Basketball Club</h2>
+                <h2>SMP Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Badminton Club</h2>
+                <h2>Orchestra</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
