--- a/recreational.html
+++ b/recreational.html
@@ -23,10 +23,10 @@
         </div>
         <div>    
             <h1>
-                Why should I join a Sports club?
+                Why should I join a Recreational club?
             </h1>
             <p>
-                A great approach to keep active, improve your teamwork abilities, and foster a sense of camaraderie among your classmates is to join a sports club at school. Playing sports fosters discipline, resilience, and strategic thinking in addition to physical conditioning and smart lifestyle choices. Being a member of a team encourages you to push your boundaries and accomplish your goals because it creates great friendships and a supportive environment. A sports club offers an enjoyable and competitive environment where you may hone your talents, take part in friendly competition, and make lifelong memories, regardless of your level of experience as an athlete.
+                A pleasant, relaxing, and balanced method to keep your life in check is to join a recreational club at school. These clubs offer a laid-back setting for you to partake in your favorite hobbies, such as sports, hiking, gaming, or arts and crafts. Joining a leisure group relieves stress and improves your general well-being while fostering community and helping you make new acquaintances. Additionally, it's a chance to discover new interests and pastimes outside of the classroom, which will enhance and enrich your time in school!
             </p>
         </div>
     </section>
@@ -39,21 +39,21 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Archery Club</h2>
+                <h2>Drama Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Basketball Club</h2>
+                <h2>SMP Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Badminton Club</h2>
+                <h2>Orchestra</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
