--- a/STEM.html
+++ b/STEM.html
@@ -23,10 +23,10 @@
         </div>
         <div>    
             <h1>
-                Why should I join a Sports club?
+                Why should I join a STEM club?
             </h1>
             <p>
-                A great approach to keep active, improve your teamwork abilities, and foster a sense of camaraderie among your classmates is to join a sports club at school. Playing sports fosters discipline, resilience, and strategic thinking in addition to physical conditioning and smart lifestyle choices. Being a member of a team encourages you to push your boundaries and accomplish your goals because it creates great friendships and a supportive environment. A sports club offers an enjoyable and competitive environment where you may hone your talents, take part in friendly competition, and make lifelong memories, regardless of your level of experience as an athlete.
+                A great method to learn more about science, technology, engineering, and math while developing critical thinking and problem-solving abilities is to join a STEM club at school. These clubs give you practical experiences through engaging projects, contests, and teamwork, enabling you to apply principles learned in the classroom to actual situations. You'll be able to work with classmates who have similar interests, pick the brains of mentors, and discover a variety of STEM-related vocations. Whether you have an interest in robots, environmental science, or code, joining a STEM club can pique your interest, broaden your knowledge, and equip you for chances in a world that is changing quickly.
             </p>
         </div>
     </section>
@@ -39,21 +39,21 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Archery Club</h2>
+                <h2>Drama Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Basketball Club</h2>
+                <h2>SMP Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Badminton Club</h2>
+                <h2>Orchestra</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
