--- a/gaming.html
+++ b/gaming.html
@@ -23,10 +23,10 @@
         </div>
         <div>    
             <h1>
-                Why should I join a Sports club?
+                Why should I join a Gaming club?
             </h1>
             <p>
-                A great approach to keep active, improve your teamwork abilities, and foster a sense of camaraderie among your classmates is to join a sports club at school. Playing sports fosters discipline, resilience, and strategic thinking in addition to physical conditioning and smart lifestyle choices. Being a member of a team encourages you to push your boundaries and accomplish your goals because it creates great friendships and a supportive environment. A sports club offers an enjoyable and competitive environment where you may hone your talents, take part in friendly competition, and make lifelong memories, regardless of your level of experience as an athlete.
+                Getting involved in the school gaming club is a great chance to meet other students who are as passionate about gaming as you are. It provides a social setting for strategy discussions, cooperative team games, and friendly tournaments, all of which promote a feeling of community. Because many of the club's games call for strategy and cooperation, it can also aid in the development of critical thinking and problem-solving abilities. It's also a fantastic chance to experiment with various gaming genres and even take part in artistic endeavors like narrative or game design. Whether you're an avid or casual player, the gaming club offers an enjoyable and welcoming atmosphere to improve your abilities and create lifelong friendships!
             </p>
         </div>
     </section>
@@ -39,21 +39,21 @@
         <div class="card-rows">
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Archery Club</h2>
+                <h2>Chess Club</h2>
+                <a href="https://exponential182.github.io/Chess-Club-Website/">
+                    <button>Explore</button>
+                </a>
+            </div>
+            <div class="cards">
+                <img src="./images/placeholder.png" alt="">
+                <h2>SMP Club</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
             </div>
             <div class="cards">
                 <img src="./images/placeholder.png" alt="">
-                <h2>Basketball Club</h2>
-                <a href="https://www.w3schools.com/">
-                    <button>Explore</button>
-                </a>
-            </div>
-            <div class="cards">
-                <img src="./images/placeholder.png" alt="">
-                <h2>Badminton Club</h2>
+                <h2>Orchestra</h2>
                 <a href="https://www.w3schools.com/">
                     <button>Explore</button>
                 </a>
