--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- topnav -->
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+    <!-- end of topnav -->
     <!-- Hero image start -->
     <section class="hero-image">
         <h1 class="hero-text">
@@ -56,7 +64,7 @@
                 <h2>STEM Clubs</h2>
                 <a href="STEM.html">
                     <button>Explore</button>
-                </a>
+                </a> 
             </div>
         </div>
         <div class="card-rows">
