Final Commit | Final Outcome

--- a/recreational.html
+++ b/recreational.html
@@ -8,6 +8,87 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- navigation start -->
+    <section class="navigation">
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">Home</a>
+            <!-- sports clubs -->
+            <div class="dropdown">
+              <button class="dropbtn">Sports
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Archery (Andi)</a>
+                <a href="#">Archery (Tianna)</a>
+                <a href="#">Basketball (Teresa)</a>
+                <a href="#">Basketball (Nathan)</a>
+                <a href="#">Badminton (Utarra)</a>
+                <a href="#">Badminton (Kevin)</a>
+                <a href="#">Pistol Shooting (Harsh)</a>
+                <a href="#">Football (Ali)</a>
+                <a href="#">Equestrians</a>
+                <a href="#">Athletics (Zac)</a>
+              </div>
+            </div>
+            <!-- art clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Arts
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Drama (William)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- STEM clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">STEM
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://mrstuff456.github.io/Websiteoutcome11DTP/">VEX Robotics (Ezra)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- gaming clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Gaming
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- leadership clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Leadership
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://sempreappassionato.github.io/BHS_School_Council/">Student Council (Andrew)</a>
+                  <a href="https://apple-tree-creator.github.io/BHS-Website-Student_Portal/">Student Intranet (Chris)</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- recreational clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Recreational
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://exponential182.github.io/Chess-Club-Website/">Chess (Mathew)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            
+        </div>
+    </section>
+    <!-- navigation end -->
     <!-- Hero image start -->
     <section class="hero-image">
         <h1 class="hero-text">
@@ -19,7 +100,7 @@
     <!-- Why Join start -->
     <section class="why-join">
         <div class="why-join-image">
-            <img src="./images/Vincent-Chen-scaled-e1675730763732.jpeg" alt="altwrt">
+            <img src="./images/recreational.jpg" alt="altwrt">
         </div>
         <div>    
             <h1>
