--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Website project by Alex Yao 22177 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +9,87 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- topnav -->
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-    <!-- end of topnav -->
+    <!-- navigation start -->
+    <section class="navigation">
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">Home</a>
+            <!-- sports clubs -->
+            <div class="dropdown">
+              <button class="dropbtn">Sports
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Archery (Andi)</a>
+                <a href="#">Archery (Tianna)</a>
+                <a href="#">Basketball (Teresa)</a>
+                <a href="#">Basketball (Nathan)</a>
+                <a href="#">Badminton (Utarra)</a>
+                <a href="#">Badminton (Kevin)</a>
+                <a href="#">Pistol Shooting (Harsh)</a>
+                <a href="#">Football (Ali)</a>
+                <a href="#">Equestrians</a>
+                <a href="#">Athletics (Zac)</a>
+              </div>
+            </div>
+            <!-- art clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Arts
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Drama (William)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- STEM clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">STEM
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://mrstuff456.github.io/Websiteoutcome11DTP/">VEX Robotics (Ezra)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- gaming clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Gaming
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- leadership clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Leadership
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://sempreappassionato.github.io/BHS_School_Council/">Student Council (Andrew)</a>
+                  <a href="https://apple-tree-creator.github.io/BHS-Website-Student_Portal/">Student Intranet (Chris)</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            <!-- recreational clubs -->
+            <div class="dropdown">
+                <button class="dropbtn">Recreational
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="https://exponential182.github.io/Chess-Club-Website/">Chess (Mathew)</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+            
+        </div>
+    </section>
+    <!-- navigation end -->
     <!-- Hero image start -->
     <section class="hero-image">
         <h1 class="hero-text">
@@ -64,7 +138,7 @@
                 <h2>STEM Clubs</h2>
                 <a href="STEM.html">
                     <button>Explore</button>
-                </a> 
+                </a>
             </div>
         </div>
         <div class="card-rows">
